    message in supervisorctl when program command not found on PATH).

  - Some child processes may not have been shut down properly at
    supervisor shutdown time.

  - Move to ZPL-derived (but not ZPL) license availble from
    http://www.repoze.org/LICENSE.txt; it's slightly less restrictive
    than the ZPL (no servicemark clause).

3.0a2

  - Fixed the README.txt example for defining the supervisor RPC
    interface in the configuration file.  Thanks to Drew Perttula.

  - Fixed a bug where process communication events would not have the
    proper payload if the payload data was very short.

  - when supervisord attempted to kill a process with SIGKILL after
    the process was not killed within "stopwaitsecs" using a "normal"
    kill signal, supervisord would crash with an improper
    AssertionError.  Thanks to Calvin Hendryx-Parker.

  - On Linux, Supervisor would consume too much CPU in an effective
    "busywait" between the time a subprocess exited and the time at
    which supervisor was notified of its exit status.  Thanks to Drew
    Perttula.

  - RPC interface behavior change: if the RPC method
    "sendProcessStdin" is called against a process that has closed its
    stdin file descriptor (e.g. it has done the equivalent of
    "sys.stdin.close(); os.close(0)"), we return a NO_FILE fault
    instead of accepting the data.

  - Changed the semantics of the process configuration 'autorestart'
    parameter with respect to processes which move between the RUNNING
    and EXITED state.  'autorestart' was previously a boolean.  Now
    it's a trinary, accepting one of 'false', 'unexpected', or 'true'.
    If it's 'false', a process will never be automatically restarted
    from the EXITED state.  If it's 'unexpected', a process that
    enters the EXITED state will be automatically restarted if it
    exited with an exit code that was not named in the process
    config's 'exitcodes' list.  If it's 'true', a process that enters